<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MangoCoinz</string>
    <string name="action_settings">Settings</string>
    <string name="action_quit">Quit</string>
    <string name="action_sync">Sync</string>
    <string name="action_send">Send</string>
    <string name="action_generate">Generate</string>
    <string name="toast_sync">Syncing with server...</string>
    
    <!-- Nav Drawer Menu Items -->
    <string-array name="nav_drawer_items">
        <item >MangoCoinz</item>
        <item >Send MCZ</item>
        <item >Receive MCZ</item>
        <item >Transactions</item>
        <item >Contacts</item>
        <item >Mango News</item>
        <item >Logout</item>
    </string-array>
    
    <!-- Nav Drawer List Item Icons -->
    <!-- Keep them in order as the titles are in -->
    <array name="nav_drawer_icons">
        <item>@drawable/ic_home</item>
        <item>@drawable/ic_send</item>
        <item>@drawable/ic_receive</item>
        <item>@drawable/ic_action_trans</item>
        <item>@drawable/ic_contacts</item>
        <item>@drawable/ic_news</item>
        <item>@drawable/ic_logout</item>
    </array>

    <string-array name="contacts_example">
        <item>Satoshi Nakamoto: satoshi</item>
        <item>John Appleseed: Japps</item>
        <item>Mary: mangouser420</item>
        <item>BitTrex: mangouser03456</item>
        <item>UseCryptos: mangouser9456</item>
        <item>Bulbs: mangouser34</item>
    </string-array>

    <string name="prompt_themes">Choose a theme</string>

    <string-array name="stn_themes">
        <item>Green &amp; White</item>
        <item>Orange &amp; White</item>
    </string-array>

    <!-- Content Description -->
    <string name="desc_list_item_icon">Item Icon</string>
    <string name="toast_quit">Syncing and quitting...</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_add">Add</string>

</resources>
