<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/action_sync"
        android:orderInCategory="1"
        android:showAsAction="withText|ifRoom"
        android:title="@string/action_sync"/>

    <item android:id="@+id/action_send"
        android:title="@string/action_send"
        android:orderInCategory="2"
        android:showAsAction="withText|ifRoom" />

    <item android:id="@+id/action_refresh"
        android:title="@string/action_refresh"
        android:orderInCategory="3"
        android:showAsAction="withText|ifRoom" />

    <item android:id="@+id/action_add"
        android:title="@string/action_add"
        android:orderInCategory="3"
        android:showAsAction="withText|ifRoom" />

    <item android:id="@+id/action_generate"
        android:title="@string/action_generate"
        android:orderInCategory="4"
        android:showAsAction="withText|ifRoom" />

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="200"
        android:showAsAction="never"
        android:title="@string/action_settings"/>

    <item
        android:id="@+id/action_quit"
        android:orderInCategory="300"
        android:showAsAction="never"
        android:title="@string/action_quit"/>

</menu>
